bug squashing and styling report section

--- a/Project/assets/css/index.css
+++ b/Project/assets/css/index.css
@@ -201,8 +201,6 @@ a {
 .bird img {
   height: 300px;
   width: auto;
-  margin-left: 40%;
-  margin-right:40% ;
 }
 
 /*
@@ -229,6 +227,63 @@ a {
 .center {
   grid-row: 2/4;
   grid-column: 2;
+}
+
+/*
+######################
+#      featured      #
+######################
+*/
+
+.featured {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.featuredbanner {
+  grid-column: 1;
+}
+
+.contents {
+  display: grid;
+  grid-column:2 ;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows:1fr 1fr ;
+}
+
+.item1 {
+  grid-column: 1;
+}
+
+.item2 {
+  grid-column: 2;
+}
+
+.item3 {
+  grid-column: 3;
+}
+
+.conend{
+  display: flex;
+  grid-row: 2;
+  grid-column: 1/4;
+  justify-content: center;
+}
+
+
+/*
+######################
+#      reports       #
+######################
+*/
+
+.reports {
+  overflow: hidden;
+  height: 100vh;
+}
+
+.reports img {
+  padding:5%;
 }
 
 
