--- a/Project/assets/css/test.css
+++ b/Project/assets/css/test.css
@@ -2,10 +2,19 @@
   --main-color:#006EB6;
   --main-font:"Comfortaa Light";
   --secondary-font:"Book Antiqua";
-  --large-font:53px;
-  --nav-height:71.5px;
+  --large-font:3.75rem;
+  --medium-font:2.5rem;
+  --nav-height:71px;
   --break-height:45px; /* Guessitmate */
+  --history-height:65vh; /* Guestimate*/
+  --future-height:100vh;
 }
+
+
+/*###########################
+##      Global Settings    ##
+###########################*/
+
 
 * {
   box-sizing: border-box;
@@ -22,17 +31,35 @@ img {
 h1 {
   color: var(--main-color);
   font: var(--large-font) var(--secondary-font);
-  font-weight: 750;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: var(--medium-font);
+  font-weight: 900; 
+  color: var(--main-color);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+ul li{
+  list-style: none;
+}
+li{
+  margin-left: 20px;
+}
+
+.segement-1 {
+  display: grid;
+  position: relative;
+  margin-top: var(--nav-height);
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
 .segement-1 .col--100vh {
   height: calc(100vh - var(--nav-height) - var(--break-height));
-}
-
-.segement-1 {
-  position: relative;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
 }
 
 .col1 > img {
@@ -42,19 +69,18 @@ h1 {
 }
 
 .col2 h1{
-  top:25%;
+  place-items: center;
+  margin-top: 35%;
   margin-left: 5%;
   margin-right:5%;
 }
 
 .col2 button {
-  display: inline;
+  position: relative;
   color: var(--main-color);
   border:solid 1px var(--main-color);
   padding: 20px;
-  top: 60%;
-  left:25%;
-  margin: 0;
+  left: 25%;
 }
 
 /*
@@ -66,6 +92,8 @@ h1 {
 nav {
   position: fixed;
   display:flex;
+  top: 0;
+  left: 0;
   width: 100%;
   background-color: #ffffff;
   z-index: 10;
@@ -94,7 +122,7 @@ nav {
 
 .navright{
   justify-content:flex-end;
-  margin-right:20px ;
+  margin-right:30px ;
   padding-top: 12px;
 }
 
@@ -113,18 +141,96 @@ nav {
   z-index: 5;
 }
 
-ul li{
-  list-style: none;
-}
-li{
-  margin-left: 20px;
-}
-
 a {
   font-family: var(--main-font);
   color: var(--main-color);
   text-decoration: none;
 }
+
+/*
+######################
+#    Break Box       #
+######################
+*/
+
+.dividergap > .hero {
+  display: flex;
+  justify-content: center;
+}
+
+.hero li {
+  display: inline-flex;
+}
+
+.dot::after {
+  padding-left:15%;
+  content:"·";
+  font-size: large;
+  color: var(--main-color);
+}
+
+.topbar, .bottombar {
+  position:relative;
+  left:0;
+  width:100%;
+  height:1px;
+  background: var(--main-color);
+  z-index: 1;
+}
+
+.bottombar {
+  top: var(--break-height);
+}
+
+/*
+######################
+#   historysegement  #
+######################
+*/
+
+.history {
+  height: var(--history-height);
+}
+
+.text {
+  margin-left: 30%;
+  margin-right: 30%;
+  text-align: center;
+}
+
+.bird img {
+  height: 300px;
+  width: auto;
+  margin-left: 40%;
+  margin-right:40% ;
+}
+
+/*
+######################
+#       future       #
+######################
+*/
+
+.future {
+  display: grid;
+  border: #006EB6;
+  grid-template-rows: 15vh 1fr 1fr ;
+  grid-template-columns: 30% 40% 30%;
+  height: calc(var(--future-height) - var(--nav-height));
+}
+
+.banner {
+  display: flex;
+  grid-column: 1/4;
+  grid-row: 1;
+  justify-content: center;
+}
+
+.center {
+  grid-row: 2/4;
+  grid-column: 2;
+}
+
 
 
 /*
@@ -139,4 +245,9 @@ a {
 
 .Searchbar {
   display:none;
+}
+
+
+.icon--hover {
+  visibility: hidden;
 }
